get images path script

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ PASSWORD_DB=animAIxpert12$
 HOST_DB=localhost
 PORT_DB=5432
 DATABASE_NAME=animaixpert_catalogue
+
+API_PROTOCOL=http
+API_HOST = localhost
+API_PORT = 8000
